# servant-elm

./: .gitignore  .lvimrc  .travis.yml  CHANGELOG.md  LICENSE  Makefile  README.md  servant-elm.cabal  stack.yaml
.github/workflows/: build.yaml
examples/: README.md  booksExample.hs  counter.hs  simple.hs
examples/books/: README.md  elm-package.json  elm.json  generate.hs
examples/e2e-tests/: README.md  elm-package.json  elm.json  generate.hs
examples/e2e-tests/elm/: Main.elm
examples/elm/: Main.elm  elm-package.json
examples/giphy/: README.md  elm-package.json  elm.json  generate.hs
examples/giphy/elm/: Main.elm
examples/readme-example/: elm-package.json  elm.json  generate.hs
src/Servant/: Elm.hs
src/Servant/Elm/: Client.hs  Foreign.hs  Generate.hs  Orphans.hs  Request.hs
src/Servant/Elm/Internal/: Foreign.hs  Generate.hs  Options.hs  Orphans.hs
src/Servant/JS/: Elm.hs
test/: Common.hs  CompileSpec.hs  GenerateSpec.hs  PolymorphicData.hs  Spec.hs  bookTypeSource.elm  bookTypeSource.txt  decodeBookSource.txt  emptyResponseHandlerSource.elm  encodeBookSource.elm  getBooksBySource.elm  getBooksBySource.txt  getBooksSource.elm  getBooksSource.txt  getNothingSource.elm  getOneSource.elm  getOneSource.txt  getWithaheaderSource.elm  handleResponseSource.elm  noContentTypeSource.elm  postBooksSource.elm  postTwoSource.elm  postTwoSource.txt
test/elm-sources/: elm-package.json  elm.json  getBooksByIdSource.elm  getBooksByTitleSource.elm  getBooksSource.elm  getNothingSource.elm  getOneSource.elm  getOneWithDynamicUrlSource.elm  getPolymorphicData.elm  getWithaheaderSource.elm  getWitharesponseheaderSource.elm  postBooksSource.elm  postTwoSource.elm  promoteErrorSource.elm  putNothingSource.elm
