name:                servant-elm
version:             0.1.0.2
synopsis:            Automatically derive Elm functions to query servant webservices.
description:         Please see README.md
homepage:            http://github.com/mattjbray/servant-elm#readme
license:             BSD3
license-file:        LICENSE
author:              Matt Bray
maintainer:          mattjbray@gmail.com
copyright:           2015-2016 Matt Bray
category:            Web
build-type:          Simple
extra-source-files:
  CHANGELOG.md
  README.md
cabal-version:       >=1.10

flag examples
  Description:       Build the example programs.
  Default:           False

library
  hs-source-dirs:      src
  exposed-modules:     Servant.Elm
  other-modules:       Servant.Elm.Foreign
                     , Servant.Elm.Generate
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , servant         == 0.5.*
                     , servant-foreign == 0.5.*
                     , text
                     , elm-export
  default-language:    Haskell2010

test-suite servant-elm-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       aeson
                     , base
                     , data-default
                     , elm-export
                     , hspec
                     , servant
                     , servant-elm
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mattjbray/servant-elm

executable books-example
  if !flag(examples)
    Buildable:         False
  main-is:             generate.hs
  build-depends:       base >= 4.7 && < 5
                     , servant >= 0.5
                     , servant-elm
  hs-source-dirs:      examples/books
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable e2e-tests-example
  if !flag(examples)
    Buildable:         False
  main-is:             generate.hs
  build-depends:       base >= 4.7 && < 5
                     , servant >= 0.5
                     , servant-elm
  hs-source-dirs:      examples/e2e-tests
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable giphy-example
  if !flag(examples)
    Buildable:         False
  main-is:             generate.hs
  build-depends:       base >= 4.7 && < 5
                     , servant >= 0.5
                     , servant-elm
  hs-source-dirs:      examples/giphy
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable readme-example
  if !flag(examples)
    Buildable:         False
  main-is:             generate.hs
  build-depends:       base >= 4.7 && < 5
                     , servant >= 0.5
                     , servant-elm
  hs-source-dirs:      examples/readme-example
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010