name:                servant-elm
version:             0.7.0
synopsis:            Automatically derive Elm functions to query servant webservices.
description:         Please see README.md
homepage:            http://github.com/mattjbray/servant-elm#readme
license:             BSD3
license-file:        LICENSE
author:              Matt Bray
maintainer:          mattjbray@gmail.com
copyright:           2015-2016 Matt Bray
category:            Web
build-type:          Simple
extra-source-files:
  CHANGELOG.md
  README.md
  test/elm-sources/elm.json
  test/elm-sources/*.elm
cabal-version:       >=1.10

flag examples
  Description:       Build the example programs.
  Default:           False

flag integration
  Description:       Build the integration tests (requires an Elm installation).
  Default:           False

library
  hs-source-dirs:      src
  exposed-modules:     Servant.Elm
                     , Servant.Elm.Internal.Foreign
                     , Servant.Elm.Internal.Generate
                     , Servant.Elm.Internal.Options
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 0.9
                     , directory
                     , elm-bridge      >= 0.4
                     , lens
                     , servant         >= 0.8
                     , servant-foreign >= 0.8
                     , text
                     , wl-pprint-text
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite servant-elm-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             GenerateSpec.hs
  other-modules:       Common
  build-depends:
                       Diff
                     , HUnit
                     , aeson >= 0.9
                     , base
                     , elm-bridge >= 0.4
                     , hspec
                     , servant
                     , servant-client
                     , servant-elm
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

test-suite servant-elm-test-integration
  if !flag(integration)
    Buildable:         False
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             CompileSpec.hs
  other-modules:       Common
  build-depends:       aeson >= 0.9
                      , base
                      , directory
                      , elm-bridge >= 0.4
                      , hspec
                      , interpolate
                      , mockery
                      , process
                      , servant
                      , servant-elm
                      , text
                      , typed-process
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mattjbray/servant-elm

executable books-example
  if !flag(examples)
    Buildable:         False
  main-is:             generate.hs
  build-depends:       base >= 4.7 && < 5
                     , elm-bridge >= 0.4
                     , servant >= 0.8
                     , servant-elm
  hs-source-dirs:      examples/books
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable e2e-tests-example
  if !flag(examples)
    Buildable:         False
  main-is:             generate.hs
  build-depends:       base >= 4.7 && < 5
                     , elm-bridge >= 0.4
                     , servant >= 0.8
                     , servant-elm
  hs-source-dirs:      examples/e2e-tests
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable giphy-example
  if !flag(examples)
    Buildable:         False
  main-is:             generate.hs
  build-depends:       base >= 4.7 && < 5
                     , elm-bridge >= 0.4
                     , servant >= 0.8
                     , servant-elm
                     , text
  hs-source-dirs:      examples/giphy
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable readme-example
  if !flag(examples)
    Buildable:         False
  main-is:             generate.hs
  build-depends:       base >= 4.7 && < 5
                     , elm-bridge >= 0.4
                     , servant >= 0.8
                     , servant-elm
  hs-source-dirs:      examples/readme-example
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
